# data-science-career-search

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DASHBOARD_ARCHITECTURE.md  ORCHESTRATION_PIPELINE.md  README.md  SerpAPIDocs.md  pyproject.toml  requirements.txt
app/: main.py
app/routes/: actions.py  applications.py  config_editor.py  jobs.py  skills.py
app/services/: applications.py  config_files.py  jobs.py
app/static/: app.css  app.js
app/templates/: base.html
app/templates/applications/: _detail.html  _new_form.html  _row.html  _table.html  index.html
app/templates/config/: career_profile.html  index.html  queries.html
config/: queries.example.yaml  settings.py
data/: frameworks.md  resume.md
db/: applications.py  connection.py  jobs.py  operations.py  schema.sql  skills.py  taxonomy.py
db/seed/: framework_aliases.csv  frameworks.csv  seed.py  skill_aliases.csv  skills.csv
llm/: client.py
matching/: career_profile.py  scoring.py  tier1_vector.py  tier2_cheap_llm.py  tier3_deep_analysis.py
pipeline/: dedup.py  embedder.py  extractor.py  fetcher.py  keyword_taxonomy_organizer.py  normalizer.py  orchestrator.py  scorer.py
scratch/: Notebook.ipynb
scratch/.ipynb_checkpoints/: Notebook-checkpoint.ipynb
scripts/: apply_taxonomy_changes.py  backfill.py  backup_db.sh  daily_run.py  fix_cross_table_taxonomy.py  match_career_profile.py  match_resume.py  purge_unreferenced_taxonomy.py  reprocess.py  rescore_active_tier3.py  rescore_tier3.py  review_candidates.py  score_top_jobs.py  single_query.py  test_pipeline.py
(+6 files in other folders)
